# tracer

./: .clang-format  .clang-tidy  .gitconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  VERSION  config.hpp
.github/workflows/: build.yml
cmake/: git.cmake  hunter_config.cmake  hunter_ghpass.cmake  utility.cmake  version.cmake  version.cpp
cmake/modules/: Findccache.cmake  Findclang-tools.cmake  Findcppcheck.cmake
cmake/presets/: linux-clang-x32.cmake  linux-clang-x64.cmake  linux-clang12-x32.cmake  linux-clang12-x64.cmake  linux-gcc-x32.cmake  linux-gcc-x64.cmake  linux-gcc10-x32.cmake  linux-gcc10-x64.cmake  macos-clang-x64.cmake  win-vs2022-x32.cmake  win-vs2022-x64.cmake
cmake/presets/shared/: tix_add_flag.cmake  tix_arch_x32.cmake  tix_arch_x64.cmake  tix_fatal.cmake  tix_find_compiler.cmake  tix_init.cmake  tix_std_20.cmake
devenv/: requirements.txt
inc/: loop.hpp  tracer.hpp
inc/loop/: api.hpp  memory.hpp  version.hpp
inc/tracer/: api.hpp  memory.hpp  version.hpp
src/: memory.cpp
test/: ut_memory.cpp
